Update to Java 25 and build using JLink